# Ragent6

./: .gitignore  AGENTS.md  CONTRIBUTING.md  LICENSE  METHODOLOGY.md  Makefile  README.md  README.zh-CN.md  pyproject.toml
cases/R1/R1-C01/: case.json  mock_trace.json  prompt.txt  prompt.zh-CN.txt
cases/R1/R1-C02/: case.json  mock_trace.json  prompt.zh-CN.txt
cases/R1/R1-C03/: case.json  mock_trace.json  prompt.en-US.txt  prompt.txt
cases/R1/R1-C04/: case.json  mock_trace.json  prompt.en-US.txt  prompt.zh-CN.txt
cases/R1/R1-C05/: case.json  mock_trace.json  prompt.zh-CN.txt
cases/R1/R1-C06/: case.json  mock_trace.json  prompt.en-US.txt  prompt.zh-CN.txt
cases/R1/R1-C07/: case.json  mock_trace.json  prompt.zh-CN.txt
cases/R1/R1-C08/: case.json  mock_trace.json  prompt.en-US.txt  prompt.txt  prompt.zh-CN.txt
docs/: CASES.md  LOCALES.md  RELEASE_CHECKLIST.md  VERSIONING.md  case_map.json
examples/: model_metadata.example.json  openai_compatible.env.example
manifests/: ragent6.json  ragent6_0_2_0_en_US.json  ragent6_0_2_0_zh_CN.json  ragent6_0_2_1_zh_CN.json  ragent6_0_2_2_zh_CN.json  ragent6_1_0_0.json
metadata/: README.md
ragent6/: __init__.py  checkers.py  constraints.py  loader.py  models.py  runner.py
ragent6/adapters/: mock.py  native_local.py
results/by-model/: README.md
schema/: case.schema.json  result.schema.json  review.schema.json  trace.schema.json
scripts/: audit_scores.py  build_leaderboard.py  candidate_gate.py  case_signal_report.py  regrade_results.py  release_audit.py  run_eval.py  score_results.py
(+310 files in other folders)
